<resources>
    <string name="app_name">Wacth</string>
    <string name="detail">Details</string>
    <string name="saat">Watch</string>
    <string name="para">$180</string>
    <string name="reviews">9444 Reviews</string>
    <string name="text">Make your casual style more fashionable with the Elegant Minimalist Leather Wristwatch! The sleek look of the watch paired with its handcrafted leather band makes for</string>
    <string name="button">ADD TO CART</string>
</resources>